Bugzilla bug 219061: fixed build failure on OSF1.  struct addrinfo is defined in <netdb.h> on recent Tru64 Unix releases.  We use AI_CANONNAME, a macro to be used with struct addrinfo, to detect that.